--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "axios": "^1.5.1",
+    "bcrypt": "^5.1.1",
+    "http-status-ts": "^2.0.1",
+    "mongoose": "^7.5.3",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.46.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "zustand": "^4.4.1"
   },
