--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "http-status-ts": "^2.0.1",
     "mongoose": "^7.5.3",
     "next": "latest",
+    "preline": "^1.9.0",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.46.2",
