--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.17.0",
     "@types/bcrypt": "^5.0.0",
+    "antd": "^5.9.4",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "http-status-ts": "^2.0.1",
     "mongoose": "^7.5.3",
     "next": "latest",
-    "preline": "^1.9.0",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.46.2",
